# zhenxun_bot

./: .env.dev  .env.example  .gitignore  Dockerfile  README.md  __version__  pyproject.toml  requirements.txt  resources.spec
.github/: release-drafter.yml
.github/actions/setup-python/: action.yml
.github/workflows/: bot_check.yml  pyright.yml  update_version_pr.yml
envs/pydantic-v1/: pyproject.toml
envs/pydantic-v2/: pyproject.toml
scripts/: auth_stage3_perf_summary.py  bot_check.py
tests/builtin_plugins/check/: test_check.py
zhenxun/: __init__.py  cli.py
zhenxun/builtin_plugins/: __init__.py  about.py  catchphrase.py  help_help.py  record_request.py  withdraw.py
zhenxun/builtin_plugins/admin/: group_update.py
zhenxun/builtin_plugins/auto_update/: __init__.py  _data_source.py
zhenxun/builtin_plugins/chat_history/: chat_message.py  chat_message_handle.py
zhenxun/builtin_plugins/check/: data_source.py
zhenxun/builtin_plugins/help/: __init__.py  _data_source.py  config.py  data_source.py  utils.py
zhenxun/builtin_plugins/hooks/: __init__.py  _auth_checker.py  auth_activation.py  auth_checker.py  auth_event_selector.py  auth_hook.py  auth_legacy_fallback.py  auth_patch_guard.py  auth_pipeline.py  auth_policy.py  auth_profile.py  auth_route.py  auth_runtime_config.py  auth_side_effect.py  auth_snapshot.py  auth_trace.py  auth_types.py  call_hook.py  chkdsk_hook.py  withdraw_hook.py
zhenxun/builtin_plugins/info/: my_info.py
zhenxun/builtin_plugins/init/: __init__.py  __init_cache.py  init_config.py  init_plugin.py  init_task.py  manager.py
zhenxun/builtin_plugins/llm_manager/: __init__.py  data_source.py  presenters.py
zhenxun/builtin_plugins/platform/: __init__.py
zhenxun/builtin_plugins/plugin_store/: data_source.py  models.py
zhenxun/builtin_plugins/restart/: __init__.py
zhenxun/builtin_plugins/scheduler/: auto_update_group.py  chat_check.py  db_cleanup.py
zhenxun/builtin_plugins/scheduler_admin/: __init__.py  command.py  commands.py  data_source.py  dependencies.py  handlers.py  presenters.py
zhenxun/builtin_plugins/shop/: __init__.py  _data_source.py  html_image.py
zhenxun/builtin_plugins/sign_in/: __init__.py  _data_source.py  utils.py
zhenxun/builtin_plugins/statistics/: _data_source.py  statistics_hook.py
zhenxun/builtin_plugins/superuser/: fg_manage.py  group_manage.py  plugin_config_manager.py  reload_setting.py  super_help.py  tag_manage.py  ui_manager.py  update_fg_info.py
zhenxun/builtin_plugins/watchdog/: __init__.py
zhenxun/builtin_plugins/web_ui/: __init__.py  utils.py
zhenxun/configs/: config.py
zhenxun/configs/utils/: __init__.py  models.py
zhenxun/models/: _bot_message_buffer.py  auth_decision_log.py  ban_console.py  bot_console.py  bot_message_store.py  chat_history.py  fg_request.py  friend_user.py  goods_info.py  group_console.py  group_info.py  group_member_info.py  group_plugin_setting.py  level_user.py  plugin_info.py  plugin_limit.py  plugin_limit_state.py  runtime_backpressure_log.py  schedule_info.py  scheduled_job.py  statistics.py  task_info.py  user_console.py  user_gold_log.py
zhenxun/services/: __init__.py  auth_observability.py  avatar_service.py  buffered_writers.py  cache.py  data_access.py  db_context.py  group_settings_service.py  help_service.py  hot_query_cache.py  limiter.py  log.py  low_priority_writer.py  memory_governor.py  message_load.py  runtime_bootstrap.py  send_queue.py  traffic_control.py  uninfo_patch.py
zhenxun/services/agent/: __init__.py  app.py  depends.py  workflows.py
zhenxun/services/ai/: __init__.py  chat_session.py  depends.py  guardrails.py  message_builder.py
zhenxun/services/auth_service/: __init__.py  cache.py  service.py  signals.py
zhenxun/services/cache/: __init__.py  bounded_ttl.py  cache_containers.py  runtime_cache.py
zhenxun/services/db_context/: __init__.py  base_model.py  (+5 more)
zhenxun/ui/: __init__.py  registry.py
zhenxun/utils/: _image_template.py  _restart_utils.py  browser.py  common_utils.py  enum.py  exception.py  http_utils.py  image_utils.py  lifespan.py  limiters.py  log_sanitizer.py  message.py  platform.py  pydantic_compat.py  restart_state.py  rules.py  utils.py
(+466 files in other folders)
